# SilentCrab-Loader

./: Cargo.toml  README.md
OLD/: calc.rs  ciphering_loader.rs  loader_crates.rs
src/: decrypt.rs  main.rs
src/evasion/: anti_debug.rs  dead_code.rs  fake_processes.rs  flow.rs  mod.rs
src/execute/: execute.rs  mod.rs  thread_hijack.rs
src/native/: call.rs  file_ops.rs  mod.rs  peb_parsing_by_hash.rs
