[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
] }
aes = "0.8"
cbc = "0.1"
hex = "0.4"
rand = "0.9.2"

[profile.release]
opt-level = 'z'  # Optimisation pour taille
lto = true
codegen-units = 1
panic = 'abort'